Fix orientation and aspect ratio stretching, re-convert WebP images

--- a/style.css
+++ b/style.css
@@ -200,7 +200,11 @@ body.dark-theme .media-item:hover {
   aspect-ratio: 3 / 4;
 }
 
-.media-wrapper img {
+.media-wrapper img,
+.media-wrapper video {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
